# research-os

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
apps/api/: __init__.py  auth.py  database.py  database_v2.py  main.py  routes_library.py  routes_v2.py
apps/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/worker/: __init__.py  graph_state.py  llm_gateway.py  runner.py  task_queue.py
apps/worker/agents/: __init__.py  paper_tag_agent.py
apps/worker/modes/: atlas.py  base.py  divergent.py  frontier.py  review.py  router.py
docs/: AGENT_ARCHITECTURE.md
infra/docker/: .dockerignore  Dockerfile  docker-compose.yml
libs/: config.py
libs/adapters/: __init__.py  crossref.py  openalex.py  scholar_fusion.py  semantic_scholar.py  unpaywall.py
libs/prompts/: __init__.py  templates.py
libs/schemas/: __init__.py  library.py  multimode.py  run.py
research_os_docs/: 01_PRD.md  02_Architecture_and_Data_Model.md  03_Agents_Workflows_and_Prompts.md  04_Delivery_Plan_and_Backlog.md  05_SemanticScholar_API_Integration_Update.md  06_Multi_Mode_Research_Agents_and_Execution_Design.md  07_Runtime_Paths_State_Machines_and_API_Contracts.md  08_UI_UX_and_Research_Workspace_Design.md  99_References.md  README.md
scripts/migration/: 001_init_schema.sql  002_add_users.sql  003_v2_multimode.sql  004_add_trace_id.sql  005_library_tables.sql
services/: embedding.py  export.py  figure_extraction.py  storage.py
services/parser/: __init__.py  arxiv_source.py  grobid_client.py  latex_parser.py
tests/: conftest.py  test_api_v2.py  test_arxiv_source.py  test_database_v2.py  test_e2e.py  test_e2e_full_workflow.py  test_e2e_modes.py  test_embedding.py  test_export.py  test_figure_extraction.py  test_latex_parser.py  test_library_api.py  test_library_prefetch.py  test_library_schemas.py  test_library_tools_db.py  test_library_tools_embedding.py  test_library_tools_storage.py  test_mode_router.py  test_multimode_schemas.py  test_paper_tag_agent.py  test_schemas.py
(+32 files in other folders)
